# strava_map

./: .gitignore  README.md  conftest.py  pyproject.toml  {f.stem}.gpx
docs/: guide.md  modules.rst  python_package.hello_world.rst  python_package.rst
src/strava_map/: __init__.py  data_types.py  graph.py  hello_world.py  process_activities.py  process_data.py  types.py
tests/: conftest.py  test_graph.py  test_process_activities.py  test_process_data.py
tests/data/: 10045856578.gpx  10075043429.gpx  10080096925.gpx  10087050380.gpx  10111026268.gpx  10166975894.gpx  10248509827.gpx  10269331978.gpx  10276443138.gpx  10281096045.gpx  10313672519.gpx  10317743327.gpx  10397519858.gpx  10405626764.gpx  10475703567.gpx  10499461379.gpx  10507143856.gpx  10514500588.gpx  10544250470.gpx  10553007099.gpx  10553199025.gpx  10559599239.gpx  10635920151.gpx  10642199454.gpx  10650524010.gpx  10689729219.gpx  10696613250.gpx  10717027618.gpx  10728007478.gpx  10735956158.gpx  10736644867.gpx  10743859192.gpx  10783513480.gpx  10790112101.gpx  10829667997.gpx  10837951295.gpx  10861717635.gpx  10926275626.gpx  10933099923.gpx  10955133036.gpx  (+114 more)
