[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name =  "strava-map"
authors = [
    {name = "Rebecca Nishide", email = "rnnishide@gmail.com"},
]
description = "Package to make an image of all routes given gpx files downloaded from Strava."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9.18"
dynamic = ["version"]

dependencies = [
    "pydantic",
    "plotly",
    "networkx==3.2.1",
    "geopy"
]

test = [
    "mypy==1.15.0",
    "ruff==0.9.9",
]

[project.urls]
Source = "https://github.com/rnnishide/strava_map"

[tool.flit.module]
name = "strava_map"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = [
  "src"
]
testpaths = ["tests", "src"]

[tool.mypy]
disable_error_code = ["import-untyped"]