[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name =  "strava-map"
authors = [
    {name = "Rebecca Nishide", email = "rnnishide@gmail.com"},
]
description = "Package to process gps coordinates from strava into plots and a graph."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9.18"
dynamic = ["version"]

dependencies = [
    "pydantic",
    "plotly",
    "networkx==3.2.1",
    "fitparse",
]

test = [
    "mypy==1.15.0",
    "ruff==0.9.9",
]

[project.urls]
Source = "https://github.com/rnnishide/strava_map"

[tool.flit.module]
name = "strava_map"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.md'"
pythonpath = [
  "src"
]
testpaths = ["tests", "src", "docs"]

[tool.mypy]
disable_error_code = ["import-untyped"]